<resources>
    <string name="app_name">Github User</string>
    <string name="search_hint">Mau cari siapa?</string>
    <string name="username">username</string>
    <string name="user_url">https://github.com/%s</string>
    <string name="repositories">Repositories</string>
    <string name="gists">Public Gists</string>
    <string name="user_detail">Detail User</string>
    <string name="_0">0</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="clear">clear</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="no_data">Data tidak ditemukan</string>
    <string name="invertocat">invertocat</string>
    <string name="title_home">Beranda</string>
    <string name="title_favorite">Favorit</string>
    <string name="title_settings">Pengaturan</string>
    <string name="title_detail">Detail</string>
    <string name="fab_content_description">favorite floating action button</string>
    <string name="dark_mode">Mode Gelap</string>
</resources>