<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fauzan.githubuser.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/navigation_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.fauzan.githubuser.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.fauzan.githubuser.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.fauzan.githubuser.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="username"
            app:argType="string"
            android:defaultValue="fauzan-radji" />
        <action
            android:id="@+id/action_detailFragment_self"
            app:destination="@id/navigation_detail"
            app:popUpTo="@id/navigation_detail"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_detailFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>